# wave_rover_navigation

./: .gitmodules  README.md
UnitApplication/ESP32/: .gitignore  Build.sh  Clean.sh  Configure.sh  ESP-IDF_Terminal.sh  Flash.sh  InitTarget.sh  Monitor.sh  README.md
UnitApplication/ESP32/Application/: CMakeLists.txt
UnitApplication/ESP32/Application/components/CAN_HAL/: CMakeLists.txt
UnitApplication/ESP32/Application/components/CAN_HAL/Include/: CAN_HAL.h  J1939.h
UnitApplication/ESP32/Application/components/CAN_HAL/Source/: CAN_HAL.c  J1939.c
UnitApplication/ESP32/Application/components/Common/: CMakeLists.txt
UnitApplication/ESP32/Application/components/Common/Include/: Common.h
UnitApplication/ESP32/Application/components/GNSS_ublox/: CMakeLists.txt
UnitApplication/ESP32/Application/components/GNSS_ublox/Include/: GNSS_ublox.h
UnitApplication/ESP32/Application/components/GNSS_ublox/Source/: GNSS_ublox.c
UnitApplication/ESP32/Application/components/NaviLogging/: CMakeLists.txt
UnitApplication/ESP32/Application/components/NaviLogging/Include/: NaviLogging.h
UnitApplication/ESP32/Application/components/NaviLogging/Source/: NaviLogging.c
UnitApplication/ESP32/Application/components/WiFi_AP/: CMakeLists.txt
UnitApplication/ESP32/Application/components/WiFi_AP/Include/: WiFi_AP.h
UnitApplication/ESP32/Application/main/: CMakeLists.txt  app_main.c
UnitApplication/ESP32/Tools/TemplateComponentGenerator/: CMakeLists.txt  TemplateComponentGenerator.py  TemplateSourceFilesGenerator.py  template.c  template.h
(+1 files in other folders)
